--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -13,7 +13,7 @@
   <body style="background-color: #f9f9f9;">
 
   <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">blog</a>
+   <a class="navbar-brand" href="{% url 'home' %}">blog</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
